[tool.poetry]
name = "repl_python3_WebbedFatherlyCleantech"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gtts = "^2.1.1"
speech-timer = "^1.0"
speech = "^0.5.2"
gtranslate-speech = "^0.1"
voice-robotifier = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
